<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ASM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    <string name="asm_label">ATM Service Management</string>
    <string name="login_txt">Login</string>
    <string name="powered_by_txt">Powered by </string>
    <string name="submit_new_tkt">Submit New Ticket</string>
    <string name="existing_tkt">Existing Tickets</string>
    <string name="view_existing_tkt">View Existing Tickets</string>
    <string name="jk">J K Chikhalkar</string>
    <string name="logout_txt">Logout</string>
    <string name="new_ticket">Submit New Ticket</string>
	<string name="submit_txt">Submit</string>
	<string name="accept_close">Accept</string>
	
    <string name="previous_comment"><u>Previous Comments</u></string>
    <string name="po_requests"><u>View PO Requests</u></string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    
    <string name="show_in_browser">Show in Browser</string>
    <string name="select_photo">Select Photo</string>
    <string name="step2">2. You can see the image that you have uploaded in the browser:</string>
    <string name="sync_requests_note">*** Do not call synchronous AWS requests on the main thread.</string>
    <string name="upload_failure_title">Upload Failure</string>
    <string name="browser_failure_title">Browser Failure</string>
    <string name="ok">OK</string>
    <string name="uploading">Uploading image…</string>
     <string name="step1">1. You can upload an image file to the Amazon S3 using AsyncTask:</string>
    <string name="siteSuggestHint">Type area or site name</string>
    <string name="vendorName">Vendor Name</string>
    <string name="vendorEmail">Vendor Email</string>
    <string name="vendorMobile">Vendor Mobile</string>
    <string name="comments">Comments</string>

    <string name="title_activity_porequest_view_screen">PORequestViewScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="update_po_request">Update PO Request</string>
    <string name="authorize">Authorize</string>
    <string name="reject">Reject</string>

</resources>
