<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center"
	android:orientation="vertical">

	

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="40dp" android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp" android:layout_marginTop="3dp"
		android:orientation="horizontal">

		<View android:layout_width="match_parent" android:layout_height="wrap_content"
			android:layout_weight="1" />

		<ImageView android:id="@+id/logoutImage"
			android:layout_width="30dp" android:layout_height="30dp"
			android:layout_gravity="center_vertical" android:src="@drawable/logout_image" />

		<TextView android:id="@+id/logoutText" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center_vertical"
			android:text="@string/logout_txt" android:textColor="#348EEA"
			android:textSize="18dp" android:textStyle="bold" />
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="match_parent" android:layout_gravity="center"
		android:layout_weight="1"
		android:gravity="center" android:orientation="vertical">

		<ImageView android:layout_width="50dp"
			android:layout_height="50dp" android:layout_gravity="center_horizontal"
			android:layout_margin="3dp" android:src="@drawable/submit_ticket" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
			android:layout_marginBottom="10dp" android:text="@string/asm_label"
			android:textSize="22dp" />

		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
			android:layout_marginTop="20dp" android:orientation="horizontal">

			<LinearLayout android:id="@+id/submitLayout"
				android:layout_width="100dp" android:layout_height="100dp"
				android:layout_margin="5dp" android:background="@drawable/border_shape"
				android:gravity="center" android:orientation="vertical">


				<ImageView android:layout_width="48dp"
					android:layout_height="48dp" android:layout_gravity="center_horizontal"
					android:src="@drawable/submit_ticket_icon" />

				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:gravity="center"
					android:text="@string/submit_new_tkt" android:textColor="#000000"
					android:textSize="12dp" android:textStyle="bold" />
			</LinearLayout>

			<LinearLayout
			    android:id="@+id/viewTicketLayout" 
			    android:layout_width="100dp"
				android:layout_height="100dp" android:layout_margin="5dp"
				android:background="@drawable/border_shape" android:gravity="center"
				android:orientation="vertical">

				<ImageView android:layout_width="48dp"
					android:layout_height="48dp" android:layout_gravity="center_horizontal"
					android:src="@drawable/existing_ticket" />

				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:gravity="center"
					android:text="@string/view_existing_tkt" android:textColor="#000000"
					android:textSize="12dp" android:textStyle="bold" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_alignParentBottom="true"
		android:gravity="center_horizontal" android:orientation="vertical"
		android:paddingBottom="40dp">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center_horizontal">

			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="center_vertical"
				android:layout_margin="2dp" android:text="@string/powered_by_txt"
				android:textColor="#348EEA" android:textSize="16dp" />

			<ImageView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:src="@drawable/securet_logo" />
		</LinearLayout>

		<TextView android:id="@+id/employeeName" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginTop="5dp"
			android:text="Logged in as Chikalkar" android:textColor="#999999"
			android:textSize="14dp" />
	</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="20dp" >
        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="2dp"
            android:textColor="#348EEA"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>