<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:src="@drawable/submit_ticket" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/asm_label"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            
            android:hint="USERNAME"
            android:inputType="textEmailAddress"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            
            android:hint="PASSWORD"
            android:inputType="textPassword"
            android:textSize="20dp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:background="#348EEA"
            android:text="@string/login_txt"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

       
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="40dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/powered_by_txt"
            android:layout_margin="2dp"
            android:textColor="#348EEA"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/securet_logo" />
    </LinearLayout>

</LinearLayout>