<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp" >

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/left_arrow" />

        <TextView
            android:id="@+id/ticketTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/submit_new_tkt"
            android:textSize="20dp" />
    </RelativeLayout>
	
    
    <LinearLayout android:layout_height="30dp"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:textSize="15dp"
            android:text="Status:"/>
        
         <TextView
            android:id="@+id/complainStatusTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="Open"
            android:textColor="#A5A5A5"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/statusImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="2dp"
            android:src="@drawable/resolved_icon" />
        <View android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"/>
        
        
        <TextView
            android:id="@+id/dateTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="DATE"
            android:textColor="#A5A5A5"
            android:textSize="15sp" />
        
        
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sitesSpnr"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:editable="false"
                android:enabled="false"
                android:textSize="16dp"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:background="@drawable/square_border_shape"
                />
            
            <requestFocus />

            <TextView
                android:id="@+id/categorySpinner"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:editable="false"
                android:enabled="false"
                android:singleLine="true"
                android:textSize="16dp"
                android:gravity="center_vertical"
                android:background="@drawable/square_border_shape" />

            <TextView
                android:id="@+id/subCategorySpnr"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:editable="false"
                android:enabled="false"
                android:singleLine="true"
                android:textSize="16dp"
                android:gravity="center_vertical"
                android:background="@drawable/square_border_shape" />

            <TextView
                android:id="@+id/severitySpnr"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:editable="false"
                android:enabled="false"
                android:singleLine="true"
                android:textSize="16dp"
                android:gravity="center_vertical"
                android:background="@drawable/square_border_shape" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/square_border_shape"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/filename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:singleLine="true"
                    android:hint="No Image Available"
                    android:textSize="16dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/camera_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="top|left"
                    android:hint="Comments"
                    android:padding="5dp"
                    android:textSize="15dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                 android:layout_weight="1" />
                
                <TextView
                    android:id="@+id/previousComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="top|left"
                    android:text="@string/previous_comment"
                    android:padding="5dp"
                    android:textColor="#348EEA"
                    android:textSize="13dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/commentET"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/square_border_shape"
                android:cursorVisible="false"
                
                android:gravity="top|left"
                android:hint="Comments"
                android:padding="5dp"
                android:textSize="15dp"
                 />
            
        </LinearLayout>
    </ScrollView>
    
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal">
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="#348EEA"
        android:text="Update"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
    <Button
        android:id="@+id/closeStatusBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="#348EEA"
        android:text="@string/accept_close"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
    
</LinearLayout>
    
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="2dp"
                android:text="@string/powered_by_txt"
                android:textColor="#348EEA"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/securet_logo" />
        </LinearLayout>

        <TextView
            android:id="@+id/employeeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Logged in as Chikalkar"
            android:textColor="#999999"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>