<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp" >

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/left_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/submit_new_tkt"
            android:textSize="20dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/square_border_shape"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/sitesSpnr"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="#00000000" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/down_arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/square_border_shape"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="#00000000" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/down_arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/square_border_shape"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/subCategorySpnr"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="#00000000" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/down_arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/square_border_shape"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/severitySpnr"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="#00000000" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/down_arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/square_border_shape"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/fileUploadET"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="Attach Picture"
                    android:singleLine="true"
                    android:textSize="16dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/camera_icon" />
            </RelativeLayout>

            <EditText
                android:id="@+id/commentET"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/square_border_shape"
                android:gravity="top|left"
                android:hint="Comments"
                android:padding="5dp"
                android:textSize="15dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="#348EEA"
        android:text="@string/submit_txt"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="2dp"
                android:text="@string/powered_by_txt"
                android:textColor="#348EEA"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/securet_logo" />
        </LinearLayout>

        <TextView
            android:id="@+id/employeeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Logged in as Chikalkar"
            android:textColor="#999999"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>